templates HTML validation fixes, css fixes and cache fixes

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -53,6 +53,7 @@
 @menuTitleColor: #5b5e61;
 @leftPanelBgColor: #e2e4d9;
 @errorMessageColor: #a94442;
+@placeHolderColor: #999;
 
 /**
  *  Font-family
@@ -149,12 +150,12 @@ a.btn {
   margin: 1em 0.2em;
 }
 .button--LR,
-.button--LR.show {
+.button--LR.data-show {
    opacity: 0;
    width: 160px;
    margin: 2em 0;
 }
-.button--LR.show {
+.button--LR.data-show {
     opacity: 1;
 }
 #profileConsentList {
@@ -163,6 +164,20 @@ a.btn {
     margin: 0 0.5em;
     display: inline-block !important;
   }
+}
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    @placeHolderColor;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    @placeHolderColor;
+   opacity:  1;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    @placeHolderColor;
+   opacity:  1;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color:    @placeHolderColor;
 }
 .form-control {
   font-size: @baseFontSize;
@@ -282,7 +297,22 @@ select:not([multiple]) {
   }
   .footer-wrapper {
     margin-left: 25%;
+    position: inherit !important;
   }
+  .footer-container.flex { 
+    clear: both; 
+    display:flex; 
+    justify-content: space-between; 
+    padding: 0.5em 0; 
+    margin: 1em 4em; 
+    border-top: 1px solid #ddd;
+  }
+}
+
+@media (max-width: 1199px) { 
+  #mainDiv.profile .footer-container.flex{ 
+    justify-content: center;
+  } 
 }
 
 /** Spacing for mainNav area so rest of page that doesn't get pushed down if portal_wrapper takes awhile to load **/
@@ -377,7 +407,6 @@ body.open-nav .left-panel {
 }
 div.right-panel {
   position:relative;
-  margin-left:1em;
   transition:margin-left ease .5s;
   max-width: 991px;
 }
@@ -992,7 +1021,7 @@ div.right-panel {
   }
   &.box-min-500 {
     min-height: 500px;
-    max-height: 600px;
+    max-height: 660px;
     margin: 2em auto;
     overflow: hidden;
   }
@@ -1288,7 +1317,11 @@ div.right-panel {
 .profile-item-container .view-container {
   display: block;
 }
-.view-container td {
+.profile-item-container .view-container td:first-of-type {
+  display: inline-block;
+  vertical-align: top;
+}
+.profile-item-container .view-container td {
   padding: 0.8em 1em;
 }
 #aboutForm .view-container {
@@ -1312,15 +1345,23 @@ div.right-panel {
 #resetPasswordContainer {
   flex-grow: 0.7;
 }
+#passwordResetMessage {
+  width: 300px;
+  max-width: 100%;
+  padding: 1em 0;
+}
 .communication-prompt {
   margin-bottom: 1em;
-}
-#registrationEmailContainer .communication-prompt{
-  margin-left: 1.7em;
 }
 
 .profile-name-label, .profile-birthdate-label {
   margin-bottom: -4px;
+}
+
+#createUserLink {
+   max-width: 100%;
+  border: 1px solid #bdb9b9;
+  height: 3.2em;
 }
 
 .profile-create-item-container {
@@ -1410,6 +1451,12 @@ div.noOrg-container {
 #createProfileForm  {
   .title {
     margin-top: 5%;
+  }
+  #phoneGroup {
+    margin-top: 1em;
+  }
+  #studyIdContainer {
+   margin-top: 1.8em;
   }
   .study-id-label {
     margin-top: 0.5em;
@@ -2630,12 +2677,6 @@ div.timezone-warning.text-warning {
     .btn {
       margin-bottom: 0.5em;
     }
-  }
-}
-
-@media (min-width: 1492px) {
-  #profileSendEmailContainer {
-    margin-left: 1.5em;
   }
 }
 @media (max-width: 1745px) {
