--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -108,7 +108,7 @@
   {% endblock %} <!-- end block nav-->
   {% block upperbanner %}
       {% if not user %}
-      <div class="upper-banner"><a class="upper-banner__text" data-toggle="modal" data-target="#modal-register">Have a code from your doctor? Click here to join us
+      <div class="upper-banner"><a class="upper-banner__text" data-toggle="modal" data-target="#modal-register">Click here to join us
           <figure></figure></a><a class="upper-banner__close js-close-upper-banner" onclick="setNoBanner()">
           <figure></figure></a></div>
       {% endif %}
