--- a/portal/templates/patient_profile_create.html
+++ b/portal/templates/patient_profile_create.html
@@ -1,20 +1,9 @@
 {% extends "layout.html" %}
 {% block main %}
-{% from "flask_user/_macros.html" import back_btn %}
-{% from "profile_macros.html" import profileName, profileBirthDate, profileEmail, profilePhone, profileOrg, profileSaveBtn %}
+{%- from "flask_user/_macros.html" import back_btn -%}
+{%- from "profile_macros.html" import profileName, profileBirthDate, profileEmail, profilePhone, profileOrg, profileSaveBtn -%}
 <br/>
-<style>
-.pc-hr {
-    border-top: 1px solid #ddd;
-}
-#clinicalGroupLabel {
-    margin-bottom: 1em;
-}
-.required {
-    color: #a09f9f ;
-}
-</style>
-<form id="createProfileForm" class="form tnth-form to-validate" role="form">
+<form id="createProfileForm" class="form tnth-form to-validate">
     <input type="hidden" id="current_user_email" value="{{user.email}}" />
     <div class="row">
         <div class="col-md-11">
@@ -33,7 +22,7 @@
                     </div>
                     <div class="form-group float-input-label profile-section" id="emailGroup">
                         <label for="email">{{ _("Email Address") }}</label>
-                        <input type="text" class="form-control" id="email" name="email" autocomplete="false" error-field="erroremail" placeholder="{{ _('Your email') }}" value="" data-customemail="true" required />
+                        <input type="text" class="form-control" id="email" name="email" autocomplete="off" placeholder="{{ _('Your email') }}" value="" data-customemail="true" required />
                         <div id="noEmailContainer">
                             <input type="checkbox" id="noEmail" class="text-muted">&nbsp;&nbsp;<span class="text-muted">User does not have email address</span>
                         </div>
@@ -95,28 +84,23 @@
             <br/>
             <div>
                 {{ back_btn('patients','patients list')}}
-                <a href="javascript:void()" style="visibility:hidden" id="profileBackLink"></a>
+                <a href="#" style="visibility:hidden" id="profileBackLink"></a>
             </div>
             </div>
             </div>
         </div>
     </div>
-
-    {% if consent_agreements %}
+    {% if consent_agreements -%}
         <div id="_consentContainer">
           {% for org in consent_agreements %}
             <input type="hidden" id="{{org}}_consentItem" value="{{consent_agreements[org].agreement_url}}" />
           {% endfor %}
         </div>
-    {% endif %}
-
+    {%- endif %}
 </form>
 <a id="redirectLink" href="">&nbsp;</a>
-
 {% endblock %}
-
 {% block document_ready %}
-
 
 function _redirect(userId) {
     if (userId) {
