--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -1,15 +1,10 @@
-{% extends "layout.html" %}
-{% block main %}
-{% from "flask_user/_macros.html" import back_btn, back_link %}
-{% from "profile_macros.html" import profile, user_profile, profileSaveBtn, profileImage %}
-<style>
-.footer-wrapper { position: inherit !important;}
-.footer-container.flex { clear: both; display:flex; justify-content: space-between; padding: 0.5em 0; margin: 1em 4em; border-top: 1px solid #ddd;}
-@media (max-width: 1199px) { .footer-container.flex{ justify-content: center;} }
-</style>
+{%- extends "layout.html" -%}
+{%- block main -%}
+{%- from "flask_user/_macros.html" import back_btn, back_link -%}
+{%- from "profile_macros.html" import profile, user_profile, profileSaveBtn, profileImage -%}
 <script>$("#mainDiv").addClass("profile");</script>
 <div id="stickyMenu"></div>
-<form id="profileForm" class="form tnth-form to-validate" role="form" data-toggle="validator">
+<form id="profileForm" class="form tnth-form to-validate" data-toggle="validator">
   <div class="row">
     <div class="col-lg-push-1 col-lg-11 col-md-push-1 col-md-11 col-sm-12">
       <br/>
@@ -19,33 +14,33 @@
       {{ back_link('patients', _('Patients List')) }}
       {% elif current_user.has_role(ROLE.ADMIN) and request.environ.HTTP_REFERER and request.environ.HTTP_REFERER.endswith("admin") %}
       {{ back_link('admin', _('User List')) }}
-      {% else %}
+      {%- else -%}
       {{ back_link(PORTAL, _('Home')) }}
-      {% endif %}
+      {%- endif -%}
       <a class="open" href="#"><span class="glyphicon index-list glyphicon glyphicon-list-alt" data-toggle="tooltip" data-placement="bottom" title="expand/collapse index list"></span></a>
       <div class="left-panel"></div>
       <div class="right-panel">
-      <div class="flex">
-      <div id="profileHeader" class="profile-header">
-        {% if user and user.username %}
-          {% if providerPerspective == 'true' %}
-              <h4 class="tnth-headline">{{ _("Patient Profile") }} <span class="profile-item-title">&nbsp;#{{ user.id}} - {{ user.username }}</span></h4>
-          {% elif current_user.has_role('admin') %}
-              <h4 class="tnth-headline">{{ _("Profile for") }} {{ user.username }}</h4>
-          {% else %}
-               <h4 class="tnth-headline">{{ _("My TrueNTH Profile") }}</h4>
-          {% endif %}
-        {% else %}
-           <h4 class="tnth-headline">{{ _("TrueNTH Profile") }}</h4>
-        {% endif %}
-      </div>
-      {{profileImage(user)}}
-        </div>
-        {% if (current_user.has_role(ROLE.STAFF) and user.has_role(ROLE.PATIENT) and (current_user.id != user.id)) %}
+          <div class="flex">
+            <div id="profileHeader" class="profile-header">
+              {%- if user and user.username -%}
+                {%- if providerPerspective == 'true' -%}
+                    <h4 class="tnth-headline">{{ _("Patient Profile") }} <span class="profile-item-title">&nbsp;#{{ user.id}} - {{ user.username }}</span></h4>
+                {%- elif current_user.has_role('admin') -%}
+                    <h4 class="tnth-headline">{{ _("Profile for") }} {{ user.username }}</h4>
+                {%- else -%}
+                     <h4 class="tnth-headline">{{ _("My TrueNTH Profile") }}</h4>
+                {%- endif -%}
+              {%- else -%}
+                 <h4 class="tnth-headline">{{ _("TrueNTH Profile") }}</h4>
+              {%- endif -%}
+            </div>
+            {%- if user and user.image_url %}{{profileImage(user)}}{% endif -%}
+         </div>
+          {%- if (current_user.has_role(ROLE.STAFF) and user.has_role(ROLE.PATIENT) and (current_user.id != user.id)) -%}
             <nav id="indexNavBar">
-            <span class="glyphicon index-list glyphicon-list-alt" data-toggle="tooltip" data-placement="top" title="{{ _('index list') }}"></span>
-            <span id="loginAsPatient" data-toggle="modal" data-target="#loginAsModal" class="link"><a data-toggle="tooltip" data-placement="top" title="For 'kiosk' style administration of an assessment">{{ _("Log in as this patient") }}</a></span>
-            <div class="modal fade" id="loginAsModal" tabindex="-1" role="dialog" aria-labelledby="loginAsModalLabel">
+              <span class="glyphicon index-list glyphicon-list-alt" data-toggle="tooltip" data-placement="top" title="{{ _('index list') }}"></span>
+              <span id="loginAsPatient" data-toggle="modal" data-target="#loginAsModal" class="link"><a data-toggle="tooltip" data-placement="top" title="For 'kiosk' style administration of an assessment">{{ _("Log in as this patient") }}</a></span>
+              <div class="modal fade" id="loginAsModal" tabindex="-1" role="dialog" aria-labelledby="loginAsModalLabel">
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
@@ -58,33 +53,30 @@
                         <br/>
                       </div>
                       <div class="modal-footer">
-                        <a href="#" onclick="handleLoginAs(event);"><button type="button" class="btn btn-default">{{ _("OK") }}</button></a>
+                        <button onclick="handleLoginAs(event);" type="button" class="btn btn-default">{{ _("OK") }}</button>
                         <button type="button" class="btn btn-default" data-dismiss="modal">{{ _("Cancel") }}</button>
                       </div>
                     </div>
                   </div>
-            </div>
+              </div>
             </nav>
-        {% endif %}
+        {%- endif -%}
         <div id="indexContainer">{{ _("Index List") }}</div>
         <br/>
-        {% if user.id == current_user.id %}
+        {%- if user.id == current_user.id -%}
           {{user_profile(user, current_user, consent_agreements, user_interventions)}}
-        {% else %}
+        {%- else -%}
           {{profile(user, current_user, consent_agreements, user_interventions)}}
-        {% endif %}
+        {%- endif -%}
           <br/><br/>
       </div>
+    </div>
   </div>
 </form>
-</div>
 {% endblock %}
-  {% block footer %}<div class="footer-wrapper right-panel"><div class="flex footer-container"><div class="copyright-container">
-      <p><small><a href="{{PORTAL}}/about">{{ _("About") }}</a> | <a href="{{PORTAL}}/contact">{{ _("Contact") }}</a> | <a href="{{PORTAL}}/privacy">{{ _("Privacy") }}</a></small></p>
-      <p><small class="text-muted">&copy;2017 Movember Foundation. All rights reserved. A registered 501(c)3 non-profit organization.</small></p></div><div class="logo-container"><a href="http://us.movember.com" title="{{ _('Movember') }}"><img id="footerLockup" src="{{PORTAL}}{{url_for('static',filename='img/Movember-Footer-Logo.png')}}" height="86" width="86" /></a></div></div></div>{% endblock %}
+{% block footer %}<div class="footer-wrapper right-panel"><div class="flex footer-container"><div class="copyright-container"><p><small><a href="{{PORTAL}}/about">{{ _("About") }}</a> | <a href="{{PORTAL}}/contact">{{ _("Contact") }}</a> | <a href="{{PORTAL}}/privacy">{{ _("Privacy") }}</a></small></p><p><small class="text-muted">&copy;2017 Movember Foundation. All rights reserved. A registered 501(c)3 non-profit organization.</small></p></div><div class="logo-container"><a href="http://us.movember.com" title="{{ _('Movember') }}"><img id="footerLockup" src="{{PORTAL}}{{url_for('static',filename='img/Movember-Footer-Logo.png')}}" height="86" width="86" alt="Movember Logo"/></a></div></div></div>{% endblock %}
 {% block document_ready %}
-{% if user.has_role('patient')  and (user.id != current_user.id) %}var patientId = {{user.id}};{% endif %}
-
+{% if user.has_role(ROLE.PATIENT) and (user.id != current_user.id) %}var patientId = {{user.id}};{% endif %}
 function handleLoginAs(e) {
     if (e) {
       e.preventDefault();
@@ -97,11 +89,8 @@ function handleLoginAs(e) {
     } catch(e) {}
     location.replace('/login-as/{{user.id}}');
 };
-
 var __stickyMenu, __navBar, __stickyMenu_topPos, __homeFooter, __indexContainer, __indexIcon, __leftPanel;
-
 $(document).ready(function(){
-
     $('#loginAsPatient a').tooltip();
 
     $("a.open").on("click", function(e) {
@@ -113,18 +102,15 @@ $(document).ready(function(){
 
     [{
         attachID: "bdMonthContainer",
-        targetField: $("#month"),
-        customErrorField: $("#errorbirthday")
+        targetField: $("#month")
       },
      {
         attachID: "bdDateContainer",
-        targetField: $("#date"),
-        customErrorField: $("#errorbirthday")
+        targetField: $("#date")
      },
      {
         attachID: "bdYearContainer",
-        targetField: $("#year"),
-        customErrorField: $("#errorbirthday")
+        targetField: $("#year")
      },
      {
         attachID: "firstNameContainer",
@@ -136,7 +122,7 @@ $(document).ready(function(){
      },
      {
         attachID: "emailGroup",
-        targetField: $("#emailGroup")
+        targetField: $("#email")
      },
      {
         attachID: "phoneGroup",
@@ -170,23 +156,21 @@ $(document).ready(function(){
         if (o.attachID) getSaveLoaderDiv("profileForm", o.attachID);
         if (o.targetField) {
           o.targetField.each(function() {
-              $(this).attr("save-container-id", o.attachID);
+              $(this).attr("data-save-container-id", o.attachID);
               var triggerEvent = $(this).attr("type") == "text" ? "blur" : "change";
               $(this).on(triggerEvent, function(e) {
                 e.stopPropagation();
                 var valid = this.validity ? this.validity.valid : true;
                 if (valid) {
                   var hasError = false;
-                  if ($(this).attr("error-field")) {
-                    var customErrorField = $("#" + $(this).attr("error-field"));
+                  if ($(this).attr("data-error-field")) {
+                    var customErrorField = $("#" + $(this).attr("data-error-field"));
                     if (customErrorField.length > 0) {
                       if (customErrorField.text() != "") hasError = true;
                       else hasError = false;
                     } else hasError = false;
                   };
-
-                  //console.log("hasError: " + hasError + " customText: " + customErrorField.text())
-                  if (!hasError) assembleContent.demo({{ user.id }},true, $(this));
+                  if (!hasError && !$(this).attr("data-update-on-validated")) assembleContent.demo({{ user.id }},true, $(this));
                 };
               });
           });
@@ -239,7 +223,7 @@ $(document).ready(function(){
     if (__leftPanel.is(":visible")) $("a.open").trigger("click");
 
     //in profile email is validated and updated after ajax call to check unique email
-    $("#email").attr("update-on-validated", "true").attr("user-id", '{{user.id}}');
+    $("#email").attr("data-update-on-validated", "true").attr("data-user-id", '{{user.id}}');
 
     $(".profile-item-container.editable").each(function() {
         $(this).prepend('<button class="btn profile-item-edit-btn"></button>');
@@ -251,11 +235,10 @@ $(document).ready(function(){
           var container = $(this).closest(".profile-item-container");
           container.toggleClass("edit");
           if (!container.hasClass("edit")) {
-              var sections = container.attr("sections") ? container.attr("sections").split(",") : false;
+              var sections = container.attr("data-sections") ? container.attr("data-sections").split(",") : false;
               if (sections) {
                   sections.forEach(function(sectionId) {
                       var errorText = container.find(".error-icon").text();
-                      console.log("error: " + errorText);
                       if (!hasValue(errorText) && fillViews[sectionId]) fillViews[sectionId]();
                   });
               }
@@ -264,5 +247,4 @@ $(document).ready(function(){
     });
 
 });
-
 {% endblock %}
