--- a/portal/templates/staff_by_org.html
+++ b/portal/templates/staff_by_org.html
@@ -6,7 +6,7 @@
     <h3 class="tnth-headline">{{ _("Staff Administration") }}</h3>
     <br/>
     <div id="staffListOptions">
-      <a href="{{ url_for('portal.staff_profile_create') }}"><button id="createUserLink" class="btn btn-default">{{ _("Create a staff record") }}</button></a>
+      <a href="{{ url_for('portal.staff_profile_create') }}" id="createUserLink" class="btn btn-default">{{ _("Create a staff record") }}</a>
       <div class="or">or</div>
       <span class="profile-item-title">{{ _("Select a user below to view or update details.") }}</span>
     </div>
