create user button css fix, org UI fix

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -246,18 +246,18 @@ select:not([multiple]) {
   margin-left: 25%;
   position: inherit !important;
 }
-#mainDiv.profile .footer-container.flex { 
-  clear: both; 
-  display:flex; 
-  justify-content: space-between; 
-  padding: 0.5em 0; 
-  margin: 1em 4em; 
+#mainDiv.profile .footer-container.flex {
+  clear: both;
+  display:flex;
+  justify-content: space-between;
+  padding: 0.5em 0;
+  margin: 1em 4em;
   border-top: 1px solid #ddd;
 }
-@media (max-width: 1199px) { 
-  #mainDiv.profile .footer-container.flex{ 
+@media (max-width: 1199px) {
+  #mainDiv.profile .footer-container.flex{
     justify-content: center;
-  } 
+  }
 }
 /** Spacing for mainNav area so rest of page that doesn't get pushed down if portal_wrapper takes awhile to load **/
 #mainNav {
@@ -1267,6 +1267,8 @@ div.right-panel {
   max-width: 100%;
   border: 1px solid #bdb9b9;
   height: 3.2em;
+  display: inline-block;
+  width: 300px;
 }
 .profile-create-item-container {
   border-radius: 8px;
@@ -2048,8 +2050,8 @@ div.timezone-warning.text-warning {
   .tnth-form .form-group > label {
     font-size: 13px;
   }
-  .create-user-link {
-    font-size: 0.95em;
+  #createUserLink {
+    font-size: 0.9em;
   }
   #indexNavBar {
     display: block;
