remove unnessary parent org check, minor registration page onblur event fix

--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -203,8 +203,14 @@ $(document).ready(function(){
     $("#retype_password").on("blur", function() {
         if (!hasValue($(this).val())) {
             $("#errorretype_password").addClass("has-error").text("{%trans%}Please re-type your password.{%endtrans%}");
-        } else $("#errorretype_password").text("");
+        } else {
+            $("#errorretype_password").text("");
+            checkValidity();
+        };
     });
+    $("#email").on("change", function() {
+        $("#erroremail").text("");
+    })
 
 });
 
