--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -558,6 +558,7 @@
 
             {% if (person.has_role('patient') or current_user.has_role('patient')) and 'patient' in config.CONSENT_EDIT_PERMISSIBLE_ROLES %}
                 var userOrgs = $("#userOrgs input[name='organization']").not('[parent_org]');
+                if (userOrgs.length == 0) userOrgs = $("#userOrgs input[name='organization']");
                 var checkedOrgs = {};
                 userOrgs.each(function() {
                     if ($(this).prop("checked")) {
