--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -114,19 +114,21 @@ a.btn {
   margin: 1em 0.2em 2em 0.2em;
 }
 .button--LR,
-.button--LR.data-show {
+.button--LR.data-show,
+#profileConsentList .button--LR{
    opacity: 0;
    width: 160px;
    margin: 2em 0;
 }
-.button--LR.data-show {
+#profileConsentList .button--LR {
+  margin: 0 0.5em;
+  display: inline-block;
+}
+.button--LR.data-show,
+#profileConsentList .button--LR[data-show] {
     opacity: 1;
 }
-#profileConsentList .button--LR,
-#profileConsentList .button--LR.data-show {
-  margin: 0 0.5em;
-  display: inline-block !important;
-}
+
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
     color:    #999;
 }
@@ -1143,7 +1145,7 @@ h4.detail-title {
   border: 2px solid #bcc2a6;
   max-width: 100%;
 }
-.profile-item-edit-btn {
+#mainDiv.profile .profile-item-edit-btn {
   position: absolute;
   top: 2em;
   right: 2em;
@@ -1153,17 +1155,22 @@ h4.detail-title {
   width: 70px;
   padding: 0 0.7em;
   color: #FFF;
+  border: 1px solid #7C959E;
   background: #7C959E;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-size: 0.9em;
 }
-.profile-item-edit-btn:hover,
-.profile-item-edit-btn:active,
-.profile-item-edit-btn:focus {
+.core-data-procedure .profile-item-container {
+  background: none;
+  border: none;
+}
+#mainDiv.profile .profile-item-edit-btn:hover,
+#mainDiv.profile .profile-item-edit-btn:active,
+#mainDiv.profile .profile-item-edit-btn:focus {
   color: #FFF;
 }
-.profile-item-edit-btn::before {
+#mainDiv.profile .profile-item-edit-btn::before {
   content: "EDIT";
   position: absolute;
   top: 0.5em;
@@ -1174,29 +1181,32 @@ h4.detail-title {
 .content-container {
   position: relative;
 }
-.profile-item-container.edit .profile-item-edit-btn::before {
-  content: "DONE";
-}
-.profile-item-container .edit-container {
+.profile-item-container .view-container {
   display: none;
 }
-.profile-item-container.edit .edit-container {
+#mainDiv.profile .profile-item-container.edit .profile-item-edit-btn::before {
+  content: "DONE";
+}
+#mainDiv.profile .profile-item-container .edit-container {
+  display: none;
+}
+#mainDiv.profile .profile-item-container.edit .edit-container {
   display: inline-block;
 }
-.profile-item-container .view-container {
+#mainDiv.profile .profile-item-container .view-container {
   display: block;
 }
-.profile-item-container .view-container td {
+#mainDiv.profile .profile-item-container .view-container td {
   padding: 0.8em 1em;
 }
-.profile-item-container .view-container td:first-of-type {
+#mainDiv.profile .profile-item-container .view-container td:first-of-type {
   display: inline-block;
   vertical-align: top;
 }
 #aboutForm .view-container {
   display: none;
 }
-.profile-item-container.edit .view-container {
+#mainDiv.profile .profile-item-container.edit .view-container {
   display: none;
 }
 .profile-item-title {
