--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -76,8 +76,10 @@
 </form>
 {% endif %}
 
+<div class="core-data-procedure">
 {% if 'procedure' in require %}
 {{profileProcedures(user, user)}}
+</div>
 <br /><br />
 <!--<button type="submit" class="btn btn-lg btn-tnth-primary continue-btn">I'm Done Entering Treatments</button> &nbsp;&nbsp;-->
 <div class="btn btn-default continue-btn">{{ _("Continue") }} <i class="fa fa-chevron-right"></i></div>
