--- a/portal/templates/patient_profile_create.html
+++ b/portal/templates/patient_profile_create.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="form-group float-input-label profile-section" id="emailGroup">
                         <label for="email">{{ _("Email Address") }}</label>
-                        <input type="text" class="form-control" id="email" name="email" autocomplete="off" placeholder="{{ _('Your email') }}" value="" data-customemail="true" required />
+                        <input type="text" class="form-control" id="email" name="email" autocomplete="off" placeholder="{{ _('Email Address') }}" value="" data-customemail="true" required />
                         <div id="noEmailContainer">
                             <input type="checkbox" id="noEmail" class="text-muted">&nbsp;&nbsp;<span class="text-muted">User does not have email address</span>
                         </div>
