--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -223,7 +223,7 @@
 {% macro profileEmail(person) -%}
     <div class="form-group float-input-label profile-section" id="emailGroup" data-error-field="erroremail">
         <label for="email">{{ _("Email Address") }}</label>
-        <input type="text" class="form-control" id="email" name="email" data-save-container-id="emailGroup" placeholder="{{ _('Your email') }}" value="{{ person.email if person and person.email and person.email != '__no_email__' }}" data-customemail="true" data-error-field="erroremail" required />
+        <input type="text" class="form-control" id="email" name="email" data-save-container-id="emailGroup" placeholder="{{ _('Email Address') }}" value="{{ person.email if person and person.email and person.email != '__no_email__' }}" data-customemail="true" data-error-field="erroremail" required />
         <div class="help-block with-errors" id="erroremail"></div>
     </div>
     <script>$(function() {
@@ -1519,7 +1519,7 @@
                 <div class="profile-item-container patient-detail-container editable" data-sections="detail">
                     <h4 id="patientDetailLoc" class="profile-item-title index-item">{{ _("My Detail") }}</h4>
                     <div class="view-container">
-                         <table>
+                        <table>
                             <tr class="gender-view"><td class="text-muted">{{_("Gender")}}</td><td><div id="gender_view"></div></td></tr>
                             <tr class="ethnicity-view"><td class="text-muted">{{_("Ethnicity")}}</td><td><div id="ethnicity_view"></div></td></tr>
                             <tr class="race-view"><td class="text-muted">{{_("Race")}}</td><td><div id="race_view"></div></td></tr>
@@ -1547,7 +1547,7 @@
         {{profileProcedures(person, current_user) | show_macro('procedures')}}
         <div class="row">
             <div class="col-md-12 col-xs-12">
-                <div class="profile-item-container {% if ROLE.PATIENT in config.CONSENT_EDIT_PERMISSIBLE_ROLES%}editable{% endif %}" data-sections="org">
+                <div class="profile-item-container {% if person.has_role(ROLE.PATIENT) and ROLE.PATIENT in config.CONSENT_EDIT_PERMISSIBLE_ROLES%}editable{% endif %}" data-sections="org">
                     <h4 id="orgsLoc" class="profile-item-title index-item">{{ _("My Clinic") }}</h4>
                      {{profileOrgsSelector(person, current_user, consent_agreements)}}
                 </div>
@@ -1564,7 +1564,7 @@
     {% else %}
         <div class="row">
             <div class="col-md-12 col-xs-12">
-                <div class="profile-item-container {% if person and (person.has_role(ROLE.ADMIN) or person.has_role(ROLE.STAFF_ADMIN)) %}editable{% endif %}" data-sections="org">
+                <div class="profile-item-container {% if person and person.has_role(ROLE.ADMIN) %}editable{% endif %}" data-sections="org">
                     <h4 id="orgsLoc" class="profile-item-title index-item">{{ _("My Clinic") }}</h4>
                     {{profileOrg(person,None,consent_agreements, current_user)}}
                 </div>
@@ -1573,9 +1573,15 @@
     {% endif %}
      <div class="row">
         <div class="col-md-12 col-xs-12">
-            <div  class="profile-item-container">
+            <div  class="profile-item-container editable" data-sections="locale, timezone">
                 <h4 id="timeZoneLocaleLoc" class="profile-item-title index-item">{{_("My Locale / Time Zone")}}</h4>
-                <div class="flex">
+                <div class="view-container">
+                    <table>
+                        <tr class="locale-view"><td class="text-muted">{{_("Language")}}</td><td><div id="locale_view"></div></td></tr>
+                        <tr class="timezone-view"><td class="text-muted">{{_("Time Zone")}}</td><td><div id="timezone_view"></div></td></tr>
+                    </table>
+                </div>
+                <div class="edit-container flex">
                     {{profileLocale(person)|show_macro('language')}}
                     {{profileTimeZone(person)}}
                 </div>
@@ -1731,9 +1737,15 @@
     {%- endif %}
     <div class="row">
         <div class="col-md-12 col-xs-12">
-            <div  class="profile-item-container">
-                <h4 id="timeZoneLocaleLoc" class="profile-item-title index-item">Locale / Time Zone</h4>
-                <div class="flex">
+            <div  class="profile-item-container editable" data-sections="locale,timezone">
+                <h4 id="timeZoneLocaleLoc" class="profile-item-title index-item">{{_("Locale / Time Zone")}}</h4>
+                <div class="view-container">
+                    <table>
+                        <tr class="locale-view"><td class="text-muted">{{_("Language")}}</td><td><div id="locale_view"></div></td></tr>
+                        <tr class="timezone-view"><td class="text-muted">{{_("Time Zone")}}</td><td><div id="timezone_view"></div></td></tr>
+                    </table>
+                </div>
+                <div class="edit-container flex">
                     {{profileLocale(person)|show_macro('language')}}
                     {{profileTimeZone(person)}}
                 </div>
@@ -1766,78 +1778,81 @@
     <script src="{{ url_for('static', filename='js/procedures.js') }}"></script>
     <div class="row">
         <div class="col-md-12 col-xs-12">
-            <div class="profile-item-container">
+            <div class="profile-item-container editable" data-sections="procedure">
                 <h4 id="clinicalDataLoc" class="profile-item-title index-item">{% if person.id == current_user.id %}{{_("My Treatments")}}{%else%}{{ _("Clinical Data") }}{% endif %}</h4>
-                <p style="color: #696767">{%if (current_user and person) and current_user.has_role(ROLE.STAFF) and current_user.id != person.id %}{{ _("Which of the following prostate cancer management options has the patient had, if any? If you don&#39;t remember the exact date, please make your best guess.") }}{%else%}{{ _("Which of the following prostate cancer management options have you had, if any? If you don&#39;t remember the exact
-                        date, please make your best guess.") }}{%endif%}<span class="text-muted smaller-text"></span></p><br/>
-                <div id="profileProcedureContainer">
-                    <div id="procedureForm" class="form-inline event-element">
-                        <p class="text-muted"><em>{{ _("Select")}}</em> {{ _("an option") }}:</p>
-                        <div class="row">
-                            <div class="col-md-6 col-xs-11">
-                                <div class='form-group'>
-                                    <select class='form-control' id='tnthproc'>
-                                        <option value=''>{{ _("Select") }}...</option>
-                                        <option value='373818007'>{{ _("Started watchful waiting") }}</option>
-                                        <option value='424313000'>{{ _("Started active surveillance") }}</option>
-                                        <option value='26294005'>{{ _("Radical prostatectomy (nerve-sparing)") }}</option>
-                                        <option value='26294005-nns'>{{ _("Radical prostatectomy (non-nerve-sparing)") }}</option>
-                                        <option value='33195004'>{{ _("External beam radiation therapy") }}</option>
-                                        <option value='228748004'>{{ _("Brachytherapy") }}</option>
-                                        <option value='707266006'>{{ _("Androgen deprivation therapy") }}</option>
-                                        <option value='999999999'>{{ _("None of the above") }}</option>
-                                    </select>
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                            </div>
-                        </div>
-                        <br/>
-                        <div id="procDateGroup" class="form-group">
-                            <label class="procedureDateLabel">{{ _("Date") }}:</label>
-                            <div class="flex">
-                                <div class="flex-item">
-                                    <input class="form-control" id="procDay" name="procDay" type="text" placeholder="DD" maxlength="2" />
-                                </div>
-                                <div class="flex-item">
-                                    <select class="form-control" name="procMonth" id="procMonth">
-                                        <option value="">{{ _("Month") }}...</option>
-                                        <option value="01">{{ _("January") }}</option>
-                                        <option value="02">{{ _("February") }}</option>
-                                        <option value="03">{{ _("March") }}</option>
-                                        <option value="04">{{ _("April") }}</option>
-                                        <option value="05">{{ _("May") }}</option>
-                                        <option value="06">{{ _("June") }}</option>
-                                        <option value="07">{{ _("July") }}</option>
-                                        <option value="08">{{ _("August") }}</option>
-                                        <option value="09">{{ _("September") }}</option>
-                                        <option value="10">{{ _("October") }}</option>
-                                        <option value="11">{{ _("November") }}</option>
-                                        <option value="12">{{ _("December") }}</option>
-                                    </select>
-                                </div>
-                                <div class="flex-item">
-                                    <input class="form-control" id="procYear" name="procYear" placeholder="YYYY" type="text" maxlength="4"/>
-                                </div>
-                                <div class="flex-item">
-                                    <button class='btn btn-default' id='tnthproc-submit' name='tnthproc' data-name='' data-date='' data-date-read=''  type="submit" disabled><i class='fa fa-plus'></i><em class="smaller-text">&nbsp;{{ _("Add") }}</em> <span class="smaller-text">{{_(" Option")}}</span></button>
-                                </div>
-                            </div>
+                <div class="view-container"><div id="procedure_view"></div></div>
+                <div class="edit-container">
+                    <p style="color: #696767">{%if (current_user and person) and current_user.has_role(ROLE.STAFF) and current_user.id != person.id %}{{ _("Which of the following prostate cancer management options has the patient had, if any? If you don&#39;t remember the exact date, please make your best guess.") }}{%else%}{{ _("Which of the following prostate cancer management options have you had, if any? If you don&#39;t remember the exact
+                            date, please make your best guess.") }}{%endif%}<span class="text-muted smaller-text"></span></p><br/>
+                    <div id="profileProcedureContainer">
+                        <div id="procedureForm" class="form-inline event-element">
+                            <p class="text-muted"><em>{{ _("Select")}}</em> {{ _("an option") }}:</p>
                             <div class="row">
-                                 <div class="col-md-10 col-xs-10"><div id="procDateErrorContainer" class="help-block with-errors"></div></div>
+                                <div class="col-md-6 col-xs-11">
+                                    <div class='form-group'>
+                                        <select class='form-control' id='tnthproc'>
+                                            <option value=''>{{ _("Select") }}...</option>
+                                            <option value='373818007'>{{ _("Started watchful waiting") }}</option>
+                                            <option value='424313000'>{{ _("Started active surveillance") }}</option>
+                                            <option value='26294005'>{{ _("Radical prostatectomy (nerve-sparing)") }}</option>
+                                            <option value='26294005-nns'>{{ _("Radical prostatectomy (non-nerve-sparing)") }}</option>
+                                            <option value='33195004'>{{ _("External beam radiation therapy") }}</option>
+                                            <option value='228748004'>{{ _("Brachytherapy") }}</option>
+                                            <option value='707266006'>{{ _("Androgen deprivation therapy") }}</option>
+                                            <option value='999999999'>{{ _("None of the above") }}</option>
+                                        </select>
+                                        <div class="help-block with-errors"></div>
+                                    </div>
+                                </div>
                             </div>
+                            <br/>
+                            <div id="procDateGroup" class="form-group">
+                                <label class="procedureDateLabel">{{ _("Date") }}:</label>
+                                <div class="flex">
+                                    <div class="flex-item">
+                                        <input class="form-control" id="procDay" name="procDay" type="text" placeholder="DD" maxlength="2" />
+                                    </div>
+                                    <div class="flex-item">
+                                        <select class="form-control" name="procMonth" id="procMonth">
+                                            <option value="">{{ _("Month") }}...</option>
+                                            <option value="01">{{ _("January") }}</option>
+                                            <option value="02">{{ _("February") }}</option>
+                                            <option value="03">{{ _("March") }}</option>
+                                            <option value="04">{{ _("April") }}</option>
+                                            <option value="05">{{ _("May") }}</option>
+                                            <option value="06">{{ _("June") }}</option>
+                                            <option value="07">{{ _("July") }}</option>
+                                            <option value="08">{{ _("August") }}</option>
+                                            <option value="09">{{ _("September") }}</option>
+                                            <option value="10">{{ _("October") }}</option>
+                                            <option value="11">{{ _("November") }}</option>
+                                            <option value="12">{{ _("December") }}</option>
+                                        </select>
+                                    </div>
+                                    <div class="flex-item">
+                                        <input class="form-control" id="procYear" name="procYear" placeholder="YYYY" type="text" maxlength="4"/>
+                                    </div>
+                                    <div class="flex-item">
+                                        <button class='btn btn-default' id='tnthproc-submit' name='tnthproc' data-name='' data-date='' data-date-read=''  type="submit" disabled><i class='fa fa-plus'></i><em class="smaller-text">&nbsp;{{ _("Add") }}</em> <span class="smaller-text">{{_(" Option")}}</span></button>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                     <div class="col-md-10 col-xs-10"><div id="procDateErrorContainer" class="help-block with-errors"></div></div>
+                                </div>
+                            </div>
+                            <br />
+                            <div id="eventListLoad"><i class="fa fa-spinner fa-spin fa-2x loading-message"></i></div>
+                            <div id="pastTreatmentsContainer" class="inner">
+                                 <hr style="border-bottom: 1px solid #e5e5e5"/>
+                                {%- if person.id == current_user.id -%}
+                                    <p class="text-muted">{{_("My History")}}:</p>
+                                {%- else -%}
+                                    <p class="text-muted"><em>{{_("Past")}}</em>&nbsp;{{ _("Management(s)") }}:</p>
+                                {%- endif -%}
+                                <div id="userProcedures"></div>
+                            </div>
+                            <br/>
                         </div>
-                        <br />
-                        <div id="eventListLoad"><i class="fa fa-spinner fa-spin fa-2x loading-message"></i></div>
-                        <div id="pastTreatmentsContainer" class="inner">
-                             <hr style="border-bottom: 1px solid #e5e5e5"/>
-                            {%- if person.id == current_user.id -%}
-                                <p class="text-muted">{{_("My History")}}:</p>
-                            {%- else -%}
-                                <p class="text-muted"><em>{{_("Past")}}</em>&nbsp;{{ _("Management(s)") }}:</p>
-                            {%- endif -%}
-                            <div id="userProcedures"></div>
-                        </div>
-                        <br/>
                     </div>
                 </div>
             </div>
