--- a/portal/templates/staff_profile_create.html
+++ b/portal/templates/staff_profile_create.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="form-group float-input-label profile-section" id="emailGroup">
                         <label for="email">{{ _("Email Address") }}</label>
-                        <input type="text" class="form-control" id="email" name="email" autocomplete="false" error-field="erroremail" placeholder="{{ _('Your email') }}" value="" data-customemail="true" required />
+                        <input type="text" class="form-control" id="email" name="email" autocomplete="false" error-field="erroremail" placeholder="{{ _('Email Address') }}" value="" data-customemail="true" required />
                         <div class="help-block with-errors" id="erroremail"></div>
                     </div>
                     {{profilePhone(False)}}
