--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1292,7 +1292,7 @@
             $(".timezone-error").html("");
             $(".timezone-warning").html("");
             assembleContent.demo({{ person.id }},true, $(this), true);
-            if ($.trim($("#profileTimeZone_error").text()) == "") {
+            if ($.trim($(".timezone-error").text()) == "") {
                 setTimeout(function(){
                     window.location.reload(true);
                 },1000);
